Spring boot. Keep img property, img catalog property

--- a/app.properties
+++ b/app.properties
@@ -2,5 +2,6 @@ version=1.0
 name=konachanWallpaper
 tags=catgirl+tail
 blacklist=male,penis,pussy_juice
-proxy.0=31.182.52.156:3129
-#proxy.1=B
+proxy.0=88.146.227.253:8080
+proxy.1=188.137.101.168:49657
+useproxy=true
