Implemented some TODOs

--- a/app.properties
+++ b/app.properties
@@ -1,7 +1,9 @@
 version=1.0
 name=konachanWallpaper
 tags=catgirl+tail
-blacklist=male,penis,pussy_juice
-proxy.0=88.146.227.253:8080
-proxy.1=188.137.101.168:49657
+blacklist=male,penis,pussy_juice,pussy,nipples,nude,underwear,swimsuit,loli,panties,nopan,no_bra
+proxy.0=1.10.188.93:34871
+proxy.1=95.130.35.88:33015
 useproxy=true
+keep_img=true
+img_catalog=images/konachan/
