Implemented timer settings, screen size filter

--- a/app.properties
+++ b/app.properties
@@ -2,8 +2,13 @@ version=1.0
 name=konachanWallpaper
 tags=catgirl+tail
 blacklist=male,penis,pussy_juice,pussy,nipples,nude,underwear,swimsuit,loli,panties,nopan,no_bra
+delay=60
+size_filter=false
+min_image_height=1080
+min_image_width=1920
 proxy.0=1.10.188.93:34871
 proxy.1=95.130.35.88:33015
 useproxy=true
 keep_img=true
 img_catalog=images/konachan/
+show_stack=false
